# mdpack

./: Cargo.toml  README.md
docs/: code2prompt.md
src/: lib.rs  main.rs  pack.rs  unpack.rs
tests/: api_test.rs
