[package]
name = "mdpack"
version = "0.1.1"
edition = "2024"
authors=["Alex Younger <thealexyounger@proton.me>"]
description="Pack codebases into Markdown bundles and expand them back into files."
license="MIT"
repository="https://github.com/AlextheYounga/mdpack"
publish=true

[lib]
path = "src/lib.rs"

[[bin]]
name = "mdpack"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
ignore = "0.4.23"
